; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_table_slot_create.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_table_slot_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @table_slot_create(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32* @table_slot_callbacks(i32 %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @RelationGetDescr(i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = call i32* @MakeSingleTupleTableSlot(i32 %10, i32* %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32**, i32*** %4, align 8
  %14 = icmp ne i32** %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i32**, i32*** %4, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32* @lappend(i32* %17, i32* %18)
  %20 = load i32**, i32*** %4, align 8
  store i32* %19, i32** %20, align 8
  br label %21

21:                                               ; preds = %15, %2
  %22 = load i32*, i32** %6, align 8
  ret i32* %22
}

declare dso_local i32* @table_slot_callbacks(i32) #1

declare dso_local i32* @MakeSingleTupleTableSlot(i32, i32*) #1

declare dso_local i32 @RelationGetDescr(i32) #1

declare dso_local i32* @lappend(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
